--- a/main.html
+++ b/main.html
@@ -7,6 +7,18 @@
 </head>
 
 <body>
+	<form action="#" method="post">
+      <label for="name">Name</label>
+      <input type="text" name="name" id="name" minlength="3" maxlength="50" required>
+      <label for="portfolio">Porfolio</label>
+      <input type="url" name="portfolio" id="portfolio"  required>
+      <label for="color">Favorite Color</label>
+      <input type="text" name="f-color" id="f-color"  >
+      <label for="like">Likeness</label>
+      <input type="range" name="name" id="name" min="1" max="100" >
+		    <button type="submit">Submit</button>
+
+    </form>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
